# nur

./: .gitignore  AGENTS.md  CACHIX_NEXT_STEPS.md  CACHIX_SETUP.md  CLAUDE.md  COMPLETE_PLCBUNDLE_STATUS.md  DETAILED_NEXT_STEPS.md  DOCUMENTATION_NAVIGATION_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  INDIGO_MIGRATION.md  LICENSE  MCP_INTEGRATION.md  MODULES_ARCHITECTURE_REVIEW.md  NEXT_STEPS.md  NIXOS_FLAKES_DOCUMENTATION_ADDED.md  PACKAGES_VS_MODULES_ANALYSIS.md  PINNING_NEEDED.md  README.md  TANGLED_STACK.md  TASK_2_COMPLETION_SUMMARY.md  TODO.md  VERIFICATION_REPORT_COMPLETE.md  WARP.md  agents.md  analyze-test-results.py  ci.nix  default.nix  flake.nix  overlay.nix  plc_bundles.json  test-migration.sh  test-red-dwarf.nix
.claude/: settings.local.json
code-references/: atproto-applications-analysis.md  atproto-core-libraries-analysis.md  comprehensive-packaging-analysis.md  packaging-implementation-summary.md  packaging-priority-matrix.md  packaging-requirements-analysis.md  tangled-configuration-requirements.md
docs/: CACHIX.md  CLAUDE.md  CODE_REVIEW_AND_COMMENTS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDES.md  DOCUMENTATION_MAINTENANCE_GUIDE.md  DOCUMENTATION_STATUS.md  ENHANCED_PACKAGING.md  GETTING_STARTED_WITH_PLCBUNDLE.md  INDEX.md  INDIGO_ARCHITECTURE.md  INDIGO_INDEX.md  INDIGO_QUICK_START.md  INDIGO_SERVICES.md  JAVASCRIPT_DENO_BUILDS.md  KONBINI_FIX.md  LIB_PACKAGING_IMPROVEMENTS.md  MICROCOSM_MODULES.md  MIGRATION.md  (+40 more)
examples/simple-rust-service/: Cargo.toml  default.nix  module.nix
examples/simple-rust-service/src/: main.rs
templates/rust-atproto/: Cargo.toml  README.md  flake.nix
templates/rust-atproto/src/: main.rs
(+417 files in other folders)
