[package]
name = "simple-atproto-service"
version = "0.1.0"
edition = "2021"
description = "A simple ATProto service example"
license = "MIT"

[[bin]]
name = "simple-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
tempfile = "3.0"
axum-test = "14.0"